<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChatLogActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_1"
        android:paddingVertical="4dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_arrow_back_36"
            android:backgroundTint="#295480"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Dennis"
            android:textColor="#295480"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_navbar"
        app:layout_constraintBottom_toTopOf="@id/cl_footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:listitem="@layout/item_left_chat_log"
        tools:itemCount="1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_1"
        android:paddingVertical="8dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/enter_message"
            android:maxLength="100"
            android:textColorHint="#6B6B6B"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_send"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/button_rounded_darker"
            android:text="@string/send"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/et_message"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>