<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_1"
    tools:context=".activity.ProfileActivity">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/baseline_arrow_back_36"
        android:backgroundTint="#295480"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_sign_out"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/baseline_logout_24"
        android:backgroundTint="#295480"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Profile"
        android:textColor="#295480"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_select_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/button_photo"
        android:padding="16dp"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/cl_form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="100"
        android:indeterminateTint="#295480"
        android:paddingBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/cl_form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/civ_select_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:civ_border_color="#52A8FF"
        app:layout_constraintBottom_toTopOf="@id/cl_form"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/common_google_signin_btn_icon_light"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_form"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/white_rounded_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_name"
            android:text="@string/name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/name"
            android:textColorHint="#6B6B6B"
            android:focusedByDefault="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_label" />
        
        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="36dp"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Email"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="36dp"
            android:text="@string/loading"
            tools:text="Aldenard@gmail.com"
            app:layout_constraintTop_toBottomOf="@id/tv_email_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/update_profile"
            android:textColor="#295480"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>